# embedding-service

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  ADR.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup_local.sh
.github/workflows/: ci.yml
app/: main.py
app/api/: routes_embed.py  routes_health.py
app/core/: config.py  errors.py  logging.py  observability.py
app/providers/: base.py  granite_provider.py  hf_provider.py
app/services/: embedding_service.py
embedding_service/: api.py  main.py  service.py
embedding_service/api/: routes_embed.py  routes_health.py
embedding_service/core/: config.py  exceptions.py  logger.py  logging.py  metrics.py  model_factory.py  schemas.py
embedding_service/providers/: base.py  granite_provider.py  hf_provider.py  registry.py
tests/: conftest.py  test_embed.py  test_embed_batch.py  test_embed_single.py  test_embedding_service.py  test_health.py  test_provider_mock.py
