[project]
name = "embedding-service"
version = "1.0.0"
description = "Enterprise-grade FastAPI microservice for text embeddings."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.121.0",
  "uvicorn[standard]==0.38.0",
  "pydantic==2.12.3",
  "pydantic-settings==2.6.1",
  "sentence-transformers==2.6.1",
  "prometheus-client==0.20.0",
  "httpx==0.28.1",
  "pytest==8.3.4",
  "torch==2.2.2",
  "transformers==4.41.2",
  "numpy==1.26.4",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.24.0", "httpx==0.28.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["embedding_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
branch = true
source = ["embedding_service"]