[project]
name = "embedding-service"
version = "1.0.0"
description = "Enterprise-grade FastAPI microservice for text embeddings."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.121.0",
  "uvicorn[standard]==0.38.0",
  "pydantic==2.12.4",
  "pydantic-settings==2.11.0",
  "sentence-transformers==5.1.2",
  "prometheus-client==0.23.1",
  "httpx==0.28.1",
  "tokenizers==0.22.1",
  "pytest==8.4.2",
  "torch==2.2.2",
  "transformers==4.57.1",
  "numpy==1.26.4",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2", "pytest-asyncio==0.24.0", "httpx==0.28.1"]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["embedding_service"]

[tool.uv]
python = "3.11"

[tool.pytest.ini_options]
addopts = "-q -ra --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501"]  # line length handled by formatter

[tool.coverage.run]
branch = true
source = ["embedding_service"]